...
                modifier = Modifier.touchClickable(onClick = increment),
                onClick = increment,
                border = ClickableSurfaceDefaults.border(focusedBorder = outerFocusBorder(8.dp)),
                scale = ClickableSurfaceDefaults.scale(focusedScale = 1f),
                colors = ControlFocusDefaults.surfaceColors(),
            ) {
                Icon(imageVector = Icons.Rounded.ArrowDropUp, contentDescription = "增加")
            }
            MenuListItem(
                modifier =
                    Modifier
                        .fillMaxWidth()
                        .onPreviewKeyEvent {
...
                modifier = Modifier.touchClickable(onClick = decrement),
                onClick = decrement,
                border = ClickableSurfaceDefaults.border(focusedBorder = outerFocusBorder(8.dp)),
                scale = ClickableSurfaceDefaults.scale(focusedScale = 1f),
                colors = ControlFocusDefaults.surfaceColors(),
            ) {
                Icon(imageVector = Icons.Rounded.ArrowDropDown, contentDescription = "减少")
            }
        }
    }
}

